<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.mainmenu.MainMenuActivity">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginTop="15dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:baselineAligned="false">

        <TextView
            style="@style/Text"
            android:textStyle="normal"
            android:textSize="15sp"
            android:text="@string/bksda_n_jawa_tengah"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/btn_burger_menu"
                android:layout_width="13dp"
                android:layout_height="11dp"
                android:src="@drawable/ic_burger"
                android:layout_gravity="end"
                android:layout_marginTop="6dp"/>

            <TextView
                android:id="@+id/tvTitleSelected"
                style="@style/Text"
                android:textSize="11sp"
                android:text="@string/profil"
                android:textAlignment="textEnd"
                android:layout_marginTop="8dp"/>
        </LinearLayout>
    </LinearLayout>

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:scrollbars="none"
        android:layout_below="@+id/linearLayout1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTabProfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/top_border_light"
                android:text="@string/profil"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/tvTabKonservasi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/top_border_light"
                android:text="@string/konservasi"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/tvTabPerizinan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/top_border_light"
                android:text="@string/perizinan"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/tvTabInformasi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/top_border_light"
                android:text="@string/informasi"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/tvTabTaman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/top_border_light"
                android:text="@string/taman"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/tvTabMedia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/top_border_light"
                android:text="@string/media"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/tvTabSimaksi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/top_border_light"
                android:text="@string/simaksi"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/tvTabKontak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/top_border_light"
                android:text="@string/kontak"
                android:textSize="11sp" />
        </LinearLayout>
    </HorizontalScrollView>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        android:layout_above="@id/imageView2"
        android:layout_below="@id/horizontalScrollView">

    </androidx.fragment.app.FragmentContainerView>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:scaleType="fitXY"
        android:src="@drawable/img_footer"
        android:layout_alignParentBottom="true"
        />

</RelativeLayout>