<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#313030"
    tools:context=".view.brownmenu.BrownMenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/image_close"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_close"
            android:scaleType="fitXY"
            android:layout_gravity="end"
            android:background="#313030"
            android:layout_margin="15dp"
            />

        <TextView
            android:id="@+id/tv_brown_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/home"
            android:layout_marginTop="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/bottom_border_bold_white"
            />

        <TextView
            android:id="@+id/tv_brown_profil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:text="@string/profil"
            android:layout_marginTop="12dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/bottom_border_bold_white"
            />

        <TextView
            android:id="@+id/tv_brown_konservasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:text="@string/area_konservasi"
            android:layout_marginTop="12dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/bottom_border_bold_white"
            />

        <TextView
            android:id="@+id/tv_brown_informasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:text="@string/informasi"
            android:layout_marginTop="12dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/bottom_border_bold_white"
            />

        <TextView
            android:id="@+id/tv_brown_perizinan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:text="@string/perizinan"
            android:layout_marginTop="12dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/bottom_border_bold_white"
            />

        <TextView
            android:id="@+id/tv_brown_simaksi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:text="@string/simaksi"
            android:layout_marginTop="12dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/bottom_border_bold_white"
            />

        <TextView
            android:id="@+id/tv_brown_taman"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:text="@string/taman_wisata_alam"
            android:layout_marginTop="12dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/bottom_border_bold_white"
            />

        <TextView
            android:id="@+id/tv_brown_media"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:text="@string/media"
            android:layout_marginTop="12dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/bottom_border_bold_white"
            />

        <TextView
            android:id="@+id/tv_brown_kontak"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:text="@string/kontak_kami"
            android:layout_marginTop="12dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/bottom_border_bold_white"
            />

        <TextView
            android:id="@+id/tv_brown_keluar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:text="@string/keluar"
            android:layout_marginTop="12dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/bottom_border_bold_white"
            />

        <ImageView
            android:layout_width="56dp"
            android:layout_height="26dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_footer_logo"
            android:layout_marginStart="20dp"
            android:layout_marginTop="65dp"
            android:layout_marginBottom="10dp"
            />
    </LinearLayout>
</ScrollView>